--- a/html/captive-portal/templates/emails/emails-guest_sponsor_preregistration.html
+++ b/html/captive-portal/templates/emails/emails-guest_sponsor_preregistration.html
@@ -19,7 +19,7 @@
                     <h1 class="align-center">[% i18n("User Account") %]</h1>
                     <p>[% i18n("Hello") %],</p>
                     <p>[% i18n("Your guest access to the network was authorized.") %]</p>
-                    <p>[% i18n ("Once on site, use the following username and password to authenticate"):</p>
+                    <p>[% i18n ("Once on site, use the following username and password to authenticate") %] :</p>
                     <p>[% i18n("Username") %]: [% pid %]</br>
                     [% i18n("Password") %]: [% password %]</p>
                     <p>[% i18n("If you have any questions regarding the registration process please contact your local support staff.") %]</p>
