--- a/html/pfappserver/root/dynamicreport/index.tt
+++ b/html/pfappserver/root/dynamicreport/index.tt
@@ -66,7 +66,7 @@
                   <td>
                     <div id="searchConditionsEmpty" class="unwell unwell-horizontal">
                       <p>
-                        <i class="icon-search" style="line-height: 24px"></i>
+                        <i class="icon-search"></i>
                         <a href="#add">[% l('Add a condition.') %]</a>
                       </p>
                     </div>
