(web admin) Move raphael JS lib to js/vendor

--- a/html/pfappserver/root/admin/nodes.tt
+++ b/html/pfappserver/root/admin/nodes.tt
@@ -37,7 +37,7 @@
   </div>
 [% END -%]
   [%  jsFiles = [
-        'js/raphael.min',
+        'js/vendor/raphael.min',
         'app/graphs',
         'admin/nodes',
         'admin/searches',
