--- a/html/pfappserver/root/admin/reports.tt
+++ b/html/pfappserver/root/admin/reports.tt
@@ -1,5 +1,5 @@
 [%  jsFiles = [
-        'js/raphael.min',
+        'js/vendor/raphael.min',
         'app/graphs',
         'admin/config/items',
         'js/node',
