--- a/html/pfappserver/root/config/source/view.tt
+++ b/html/pfappserver/root/config/source/view.tt
@@ -12,7 +12,7 @@
 [% END %]
 <ul class="breadcrumb">
   <li><a href="[% c.pf_hash_for(c.controller.action_for('index')) %]">[% l('Authentication Sources') %]</a> <span class="divider"><i class="icon-chevron-right"></i></span></li>
-  <li class="active">[% item.id | html %]</li>
+  <li class="active">[% heading %]</li>
 </ul>
 
 <div class="card">
