--- a/html/pfappserver/root/admin/wrapper.tt
+++ b/html/pfappserver/root/admin/wrapper.tt
@@ -140,6 +140,17 @@
 [% FOREACH js = jsFiles -%]
     <script type="text/javascript" src="[% c.uri_for("/static/${js}.js") %]" charset="UTF-8"></script>
 [% END -%]
+    <!-- TODO: move this into a JS file we'll load here -->
+    <script>
+      $.ajaxPrefilter(function(options, originalOptions, xhr){
+        console.log(options);
+        //TODO: check for multi-cluster being enabled
+        if(options.url.indexOf("multi-cluster-scope") == -1) {
+          options.url += options.url.indexOf("?") != -1 ? "&" : "?";
+          options.url +="multi-cluster-scope=stdalone.inverse";
+        }
+      });
+    </script>
 
   </body>
 </html>
