--- a/html/pfappserver/root/admin/wrapper.tt
+++ b/html/pfappserver/root/admin/wrapper.tt
@@ -85,6 +85,11 @@
                 <a href="[% c.uri_for(c.controller('Admin').action_for('configuration')) %]">[% l('Configuration') %]</a>
               </li>
               [%- END %]
+              [%- IF can_access_group_any("CONFIGURATION_GROUP_READ") %]
+              <li[% ' class="active"' IF c.action.name == 'select_scope' %]>
+                <a href="[% c.uri_for(c.controller('Admin').action_for('select_scope')) %]">[% l('Select scope') %]</a>
+              </li>
+              [%- END %]
             </ul>
             <ul class="nav nav-header pull-right">
               <li class="dropdown" data-toggle="tooltip" title="[% l('Perform checkup') %]">
