--- a/html/pfappserver/root/config/source/type/LDAP.tt
+++ b/html/pfappserver/root/config/source/type/LDAP.tt
@@ -1,9 +1,9 @@
-        <div class="control-group">
-          <label class="control-label">[% l('Host') %]</label>
-          <div class="controls">
-            [% form.field('host').render_element | none %]:[% form.field('port').render_element | none %] [% form.field('encryption').render_element | none %]
-          </div>
-        </div>
+<div class="control-group">
+  <label class="control-label">[% l('Host') %]</label>
+  <div class="controls">
+    [% form.field('host').render_element | none %]:[% form.field('port').render_element | none %] [% form.field('encryption').render_element | none %]
+  </div>
+</div>
 [% form.field('connection_timeout').render | none %]
 [% form.field('basedn').render | none %]
 [% form.field('scope').render | none %]
@@ -11,12 +11,15 @@
 [% form.field('email_attribute').render | none %]
 [% form.field('binddn').render | none %]
 [% form.field('cache_match').render | none %]
-        <div class="control-group">
-          <label class="control-label">[% l('Password') %] <i class="icon-required"></i></label>
-          <div class="controls">
-            [% form.field('password').render_element | none %]
-            <a class="btn" id="testSource" href="[% c.uri_for(c.controller.action_for('test'), [item.type]) %]">[% l('Test') %]</a>
-          </div>
-        </div>
+<div class="control-group">
+  <label class="control-label">[% l('Password') %] <i class="icon-required"></i></label>
+  <div class="controls">
+    <div class="input-append">
+      [% form.field('password').render_element | none %]
+      <button type="button" class="btn"><i class="icon-eye"></i></button>
+      <a class="btn" id="testSource" href="[% c.uri_for(c.controller.action_for('test'), [item.type]) %]">[% l('Test') %]</a>
+    </div>
+  </div>
+</div>
 [% form.field('stripped_user_name').render | none %]
 
