--- a/conf/ansible/packetfence-push-configuration.yml.tt
+++ b/conf/ansible/packetfence-push-configuration.yml.tt
@@ -9,3 +9,5 @@
     [% END %]
     - name: Reload configuration
       command: /usr/local/pf/bin/pfcmd configreload hard
+    - name: record-push-configuration
+      local_action: command mkdir -p /usr/local/pf/var/deployed/{{ host_path }} && touch /usr/local/pf/var/deployed/{{ host_path }}
