(web admin) Enable modal of scope selector

--- a/html/pfappserver/root/admin/wrapper.tt
+++ b/html/pfappserver/root/admin/wrapper.tt
@@ -112,7 +112,8 @@
             [%- IF multi_cluster_enabled %]
             <ul class="nav nav-header pull-right">
               <li>
-                <a href="[% c.uri_for(c.controller('Admin').action_for('select_scope')) %]">[% multi_cluster_scope %] <i class="icon-map-marker icon-white"></i></a>
+                <a id="scopeSelector"
+                   href="[% c.uri_for(c.controller('Admin').action_for('select_scope')) %]">[% multi_cluster_scope %] <i class="icon-map-marker icon-white"></i></a>
               </li>
             </ul>
             [% END %]
