--- a/html/pfappserver/root/admin/select_scope.tt
+++ b/html/pfappserver/root/admin/select_scope.tt
@@ -4,10 +4,13 @@
 [% "?multi-cluster-scope=" _ scope %]
 [%- END -%]
 
+[%- MACRO multi_cluster_scope_state_class(scope) BLOCK -%]
+[% IF scope.hasUnpushedChanges() %]unpushed-changes[% ELSE %]all-pushed[% END %]
+[%- END -%]
 [%- MACRO multi_cluster_render(object) BLOCK -%]
   [% IF object.isa("pf::multi_cluster::region") %]
   <li>
-    <b><a href="[% multi_cluster_scope_change_uri(object.name) %]">[% object.name %]</a></b>
+    <b><a class="[% multi_cluster_scope_state_class(object) %]" href="[% multi_cluster_scope_change_uri(object.name) %]">[% object.name %]</a></b>
     <ul>
     [% FOREACH child IN object.childs.keys %]
     [% multi_cluster_render(object.childs.$child) | none %]
@@ -15,9 +18,9 @@
     </ul>
   </li>
   [% ELSIF object.isa("pf::multi_cluster::cluster") %]
-  <li><a href="[% multi_cluster_scope_change_uri(object.name) %]">'[% object.name %]' cluster</a></li>
+  <li><a class="[% multi_cluster_scope_state_class(object) %]" href="[% multi_cluster_scope_change_uri(object.name) %]">'[% object.name %]' cluster</a></li>
   [% ELSIF object.isa("pf::multi_cluster::standalone_server") %]
-  <li><a href="[% multi_cluster_scope_change_uri(object.name) %]">'[% object.name %]' server</a></li>
+  <li><a class="[% multi_cluster_scope_state_class(object) %]" href="[% multi_cluster_scope_change_uri(object.name) %]">'[% object.name %]' server</a></li>
   [% END %]
 [%- END -%]
 
@@ -34,3 +37,12 @@
   </div>
 
 </div>
+
+<style>
+.all-pushed {
+  background-color:green;
+}
+.unpushed-changes {
+  background-color:red;
+}
+</style>
