--- a/html/pfappserver/root/authentication/source/type/OpenID.tt
+++ b/html/pfappserver/root/authentication/source/type/OpenID.tt
@@ -2,7 +2,7 @@
 [% form.field('client_secret').render | none %]
 [% form.field('site').render | none %]
 [% form.field('access_token_path').render | none %]
-[% form.field('access_token_param').render | none %]
+[% form.field('authorize_path').render | none %]
 [% form.field('protected_resource_url').render | none %]
 [% form.field('scope').render | none %]
 [% form.field('redirect_url').render | none %]
