Render the action template

--- a/html/pfappserver/root/config/source/view.tt
+++ b/html/pfappserver/root/config/source/view.tt
@@ -28,6 +28,7 @@
       <strong>[% l('Success!') %]</strong> [% message %]
     </div>
     [% END -%]
+    [% form.block('action_templates').render | none %]
 <form name="modalSource" class="form-horizontal" action="[% action_url %]" method="post">
 
         [% form.field('id').render | none %]
