--- a/html/pfappserver/root/static/app/application.css
+++ b/html/pfappserver/root/static/app/application.css
@@ -70,3 +70,8 @@ form .uneditable {
 .nav li a:hover, .nav li a:focus {
     text-decoration: none;
 }
+
+.input-prepend .chzn-choices .search-choice,
+.input-append .chzn-choices .search-choice {
+    font-size : 14px;
+}
