--- a/html/pfappserver/root/admin/wrapper.tt
+++ b/html/pfappserver/root/admin/wrapper.tt
@@ -85,6 +85,11 @@
                 <a href="[% c.uri_for(c.controller('Admin').action_for('configuration')) %]">[% l('Configuration') %]</a>
               </li>
               [%- END %]
+              [%- IF can_access("REMOTE_DEPLOYMENT_READ") %]
+              <li[% ' class="active"' IF c.request.path == 'admin/remote_deployment' %]>
+                <a href="[% c.uri_for(c.controller('Admin').action_for('remote_deployment')) %]">[% l('Deploy') %]</a>
+              </li>
+              [%- END %]
             </ul>
             <ul class="nav nav-header pull-right">
               <li class="dropdown" data-toggle="tooltip" title="[% l('Perform checkup') %]">
