Seperate local account in it's own block

--- a/html/pfappserver/root/config/source/view.tt
+++ b/html/pfappserver/root/config/source/view.tt
@@ -34,6 +34,7 @@
         [% form.field('id').render | none %]
         [% form.block('standard').render | none %]
         [% INCLUDE "config/source/type/${item.type}.tt" %]
+        [% form.block('local_account').render | none %]
         [% form.block('rules').render | none %]
 
     <div class="form-actions">
