remove "password server" from samba chroot config
Removed the "password server", as recommended by the samba
core team members Andrew Bartlett and Rowland Penny here:
https://lists.samba.org/archive/samba/2017-June/208999.html

--- a/addons/AD/smb.tt
+++ b/addons/AD/smb.tt
@@ -19,7 +19,7 @@ idmap uid = 600-20000
 idmap gid = 600-20000
 template shell = /bin/bash
 winbind expand groups = 10
-password server = [% ad_server %]
+# password server = [% ad_server %]
 domain master = no
 local master = no
 preferred master = no
