--- a/html/pfappserver/root/config/switch/list.tt
+++ b/html/pfappserver/root/config/switch/list.tt
@@ -31,8 +31,11 @@
                 </form>
               [% END %]
               [% pagination(c.controller.action_for(action), page_num, page_count, {}) | none %]</th>
+                <div>
+                    [% csv_import %]
+                </div>
                 <div class="btn-group pull-right">
-                  <button class="btn btn-primary"><a href="#" data-export-url="[% c.uri_for(c.controller('Switch').action_for('import_csv')) %]" data-export-form="#simpleUserSearch" class="importCSVBtn">[% l('Import from CSV') %]</button>
+                  <button class="btn btn-primary"><a href="#" data-export-url="[% c.uri_for(c.controller('Switch').action_for('import_from__csv')) %]" data-export-form="#simpleUserSearch" class="importCSVBtn">[% l('Import from CSV') %]</button>
                 </div>
           </tr>
           <tr>
