--- a/html/pfappserver/root/config/switch/index.tt
+++ b/html/pfappserver/root/config/switch/index.tt
@@ -1,6 +1,25 @@
       <div class="modal modal-large fade hide" id="modalSwitch">
       </div>
 
+      <div class="modal modal-large fade hide" id="modalSwitchImport">
+        <form autocomplete="off" name="modalSwitchImport" class="form-horizontal form-condensed" action="[% c.uri_for(c.controller.action_for('import')) %]" method="post">
+          <div class="modal-header">
+            <a class="close" data-dismiss="modal">&times;</a>
+            <h3>Import switches from CSV</h3>
+          </div>
+        
+          <div class="modal-body">
+            [% current_form_instance.field('importcsv').render | none %]
+            [% current_form_instance.field('delimiter').render | none %]
+          </div><!--modal-body-->
+        
+          <div class="modal-footer">
+            <a href="#" class="btn" data-dismiss="modal">[% l('Close') %]</a>
+            [% IF can_access("SWITCHES_CREATE") %]<button class="btn btn-primary" data-loading-text="[% l('Import') %]"><a href"[% c.uri_for(c.controller('Switch').action_for('import')) %]">[% l('Import') %]</a></button>[% END %]
+          </div>
+        </form>
+      </div>
+
       <div class="modal fade hide" id="deleteSwitch">
         <div class="modal-header">
           <a class="close" data-dismiss="modal">&times;</a>
