--- a/html/pfappserver/root/config/switch/index.tt
+++ b/html/pfappserver/root/config/switch/index.tt
@@ -2,7 +2,8 @@
       </div>
 
       <div class="modal modal-large fade hide" id="modalSwitchImport">
-        <form autocomplete="off" name="modalSwitchImport" class="form-horizontal form-condensed" action="[% c.uri_for(c.controller.action_for('import')) %]" method="post">
+        <iframe class="hidden" src="about:blank" id="iframe_form" name="iframe_form"></iframe>
+        <form autocomplete="off" name="modalSwitchImport" class="form-horizontal form-condensed" action="[% c.uri_for(c.controller.action_for('import_csv')) %]" enctype="multipart/form-data" method="post" target="iframe_form">
           <div class="modal-header">
             <a class="close" data-dismiss="modal">&times;</a>
             <h3>[% l('Import switches from CSV') %] [% doc('_import_from_csv') | none %]</h3>
@@ -15,7 +16,7 @@
         
           <div class="modal-footer">
             <a href="#" class="btn" data-dismiss="modal">[% l('Close') %]</a>
-            [% IF can_access("SWITCHES_CREATE") %]<button class="btn btn-primary" data-loading-text="[% l('Import') %]"><a href"[% c.uri_for(c.controller('Switch').action_for('import')) %]">[% l('Import') %]</a></button>[% END %]
+            [% IF can_access("SWITCHES_CREATE") %]<button id="import_csv_btn" type="submit" class="btn btn-primary" data-loading-text="[% l('Import') %]"><a href"[% c.uri_for(c.controller('Switch').action_for('import_csv')) %]">[% l('Import') %]</a></button>[% END %]
           </div>
         </form>
       </div>
