--- a/html/pfappserver/root/config/switch/list.tt
+++ b/html/pfappserver/root/config/switch/list.tt
@@ -31,9 +31,7 @@
                 </form>
               [% END %]
               [% pagination(c.controller.action_for(action), page_num, page_count, {}) | none %]</th>
-                <div class="btn-group pull-right">
-                  <button id="importSwitchCsv" class="btn btn-primary"><a href="#modalSwitchImport" data-toggle="modal">[% l('Import from CSV') %]</a></button>
-                </div>
+              <div class="help-block clearfix"><a href="#modalSwitchImport" id="importSwitchCsv" class="btn pull-right" data-toggle="modal">[% l('Import from CSV') %]</a></div>
           </tr>
           <tr>
             <th>[% l('Identifier') %]</th>
