--- a/addons/monit/monit_checks_configurations/00_packetfence.tt
+++ b/addons/monit/monit_checks_configurations/00_packetfence.tt
@@ -27,6 +27,13 @@ CHECK PROCESS packetfence-redis-cache MATCHING "redis-server \*:6379"
     if failed host 127.0.0.1 port 6379 protocol redis for 5 cycles then alert
     if 3 restarts within 10 cycles then alert
 
+CHECK PROCESS packetfence-haproxy MATCHING "haproxy-systemd-wrapper"
+    group PacketFence
+    start program = "/usr/local/pf/bin/pfcmd service haproxy start" with timeout 60 seconds
+    stop program  = "/usr/local/pf/bin/pfcmd service haproxy stop"
+    if 3 restarts within 10 cycles then alert
+    [% IF ACTIVE_ACTIVE %]if failed host 127.0.0.1 port 3306 protocol mysql for 5 cycles then alert[% END %]
+
 CHECK PROCESS packetfence-dhcpd MATCHING "dhcpd"
     group PacketFence
     start program = "/usr/local/pf/bin/pfcmd service dhcpd start" with timeout 60 seconds
