expose node_import section in admin interface
fixes #2386

--- a/html/pfappserver/root/admin/configuration.tt
+++ b/html/pfappserver/root/admin/configuration.tt
@@ -217,6 +217,7 @@
               [% pf_section_entry( 'database', 'Database', subsections.database) | none %]
               [% pf_section_entry( 'active_active', 'Cluster') | none %]
               [% pf_section_entry( 'radius_authentication_methods', 'Authentication Methods') | none %]
+              [% pf_section_entry( 'node_import', 'Node Import') | none %]
               [%- END %]
               [%- IF can_access("ADMIN_ROLES_READ") %]
               [% list_entry('Config::AdminRoles', 'index', 'Admin Access') | none %]
