remove "Pouet pouet 25 MB/s" from billing tier template
fixes #2497

--- a/html/captive-portal/templates/billing/tier.html
+++ b/html/captive-portal/templates/billing/tier.html
@@ -6,7 +6,7 @@
     <ul class="list-ui">
       <li class="list-ui__item">
         <div>[% i18n("Tier") %]</div>
-        <div class="caption">Pouet pouet 25 Mb/s[% tier.name %]</div>
+        <div class="caption">[% tier.name %]</div>
       </li>
       <li class="list-ui__item">
         <div>[% i18n("Price") %]</div>
