--- a/html/pfappserver/root/dynamicreport/search.tt
+++ b/html/pfappserver/root/dynamicreport/search.tt
@@ -16,7 +16,11 @@
     [% FOREACH item IN items %]
     <tr>
       [% FOREACH key IN item.keys %]
-      <td>[% item.$key %]</td>
+        [% IF report.is_person_field(key) %]
+        <td><a href="[% c.uri_for(c.controller("User").action_for('view'), [ item.Owner ]) %]">[% item.Owner %]</a></td>
+        [% ELSE %]
+        <td>[% item.$key %]</td>
+        [% END %]
       [% END %]
     </tr>
     [% END %]
