--- a/html/pfappserver/root/dynamicreport/index.tt
+++ b/html/pfappserver/root/dynamicreport/index.tt
@@ -97,3 +97,10 @@
   [% INCLUDE 'dynamicreport/search.tt' %]
 </div>
 
+<script>
+$(function() { // DOM ready
+    var nodes = new Nodes();
+    var view = new NodeView({ nodes: nodes, parent: $('#section') });
+});
+
+</script>
