--- a/html/pfappserver/root/configurator/enforcement.tt
+++ b/html/pfappserver/root/configurator/enforcement.tt
@@ -39,6 +39,9 @@
                     <th>
                       <input type="checkbox" name="enforcement" value="webauth"[% IF c.session.enforcements.hotspot %] checked=""[% END %]> [% l('WebAuth enforcement') %]
                     </th>
+                   <th>
+                      <input type="checkbox" name="enforcement" value="radius"[% IF c.session.enforcements.radius %] checked=""[% END %]> [% l('RADIUS enforcement') %]
+                    </th>
                   </tr>
                 </thead>
                 <tbody>
@@ -52,12 +55,18 @@
                     <td>
                       [% l('PacketFence is the server that assigns the Role (or ACL) to the devices. This mode is for web authentication.') %]
                     </td>
+                    <td>
+                      [% l('PacketFence is the server that validate the RADIUS authentication and return the VLAN (or roles) to the devices. This mode does not have a registration option, it is either accept or deny with the final VLAN.') %]
+                    </td>
                   </tr>
                   <tr>
                     <td class="graph">
                       <img src="[% c.uri_for('/static/configurator/enforcement-inline.png') %]">
                     </td>
                     <td class="graph">
+                      <img src="[% c.uri_for('/static/configurator/enforcement-vlan.png') %]">
+                    </td>
+                   <td class="graph">
                       <img src="[% c.uri_for('/static/configurator/enforcement-vlan.png') %]">
                     </td>
                    <td class="graph">
