--- a/html/pfappserver/root/admin/users.tt
+++ b/html/pfappserver/root/admin/users.tt
@@ -91,7 +91,7 @@
               </div><!--#simple-->
               <div class="tab-pane" id="advanced">
                 <form id="advancedUserSearch" method="POST" name="advancedUserSearch" class="form-inline" action="[% c.uri_for(c.controller('User').action_for('advanced_search')) %]">
-                  <table id="advancedUserSearchConditions" class="table-dynamic">
+                  <table id="advancedUserSearchConditions" class="table table-condensed table-dynamic unbordered">
                     <thead>
                       <tr>
                         <td>
