--- a/html/pfappserver/root/config/deviceregistration/index.tt
+++ b/html/pfappserver/root/config/deviceregistration/index.tt
@@ -26,7 +26,7 @@
 
       [%- IF can_access("DEVICE_REGISTRATION_CREATE") %]
         <div class="form-actions">
-          <a class="btn createItem" href="[% c.pf_hash_for(c.controller('Config::DeviceRegistration').action_for('create')) %]">[% l('Add device registration') %]</a>
+          <a class="btn createItem" href="[% c.uri_for(c.controller('Config::DeviceRegistration').action_for('create')) %]">[% l('Add device registration') %]</a>
         </div>
       [%- END %]
       </div>
